# enterprise-rag

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements-vercel.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  exceptions.py  main.py
app/api/: deps.py  error_handlers.py  router.py
app/auth/: __init__.py  dependencies.py  jwt.py  password.py
app/config/: settings.py
app/database/: __init__.py  base.py  session.py  types.py
app/logging/: __init__.py  logger.py
app/middleware/: metrics.py  rate_limit.py
app/rag/: __init__.py  chunking.py  citations.py  embeddings.py  embeddings_factory.py  embeddings_openai.py  llm.py  pipeline.py  prompts.py  reranker.py  types.py  vector_store.py
app/repositories/: __init__.py  chunk_repository.py  conversation_repository.py  document_repository.py  embedding_repository.py  log_repository.py  message_repository.py  user_repository.py
app/schemas/: auth.py  chat.py  document.py  user.py
app/services/: auth_service.py  chat_service.py  file_validator.py  ingestion_service.py  upload_service.py
deployment/: aws.md  render.md
docker/: Dockerfile  docker-compose.yml
docs/: api.md  architecture.md  github-setup.md  linkedin.md  vercel.md
monitoring/: prometheus.yml
scripts/: start.sh
tests/: conftest.py  mocks.py
tests/integration/: test_auth_api.py  test_health.py  test_upload_api.py
tests/unit/: test_auth_service.py  test_chunking.py  test_file_validator.py  test_jwt.py  (+3 more)
(+11 files in other folders)
